Closed Bug 852024 Opened 12 years ago Closed 12 years ago

[TSF] MetroWidget hasn't implemented GetIMEUpdatePreference()

Categories

(Core :: Widget: Win32, defect)

x86_64
Windows 8.1
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

(Keywords: inputmethod)

Attachments

(1 file)

Attached patch PatchSplinter Review
MetroWidget doesn't implemented nsIWidget::GetIMEUpdatePreference(). This causes nsIMEStateManager doesn't create nsTextStateManager. Then, neither NotifyIME(NOTIFICATION_OF_FOCUS), NotifyIME(NOTIFICATION_OF_BLUR), NotifyIME(NOTIFICATION_OF_SELECTIONCHANGE) nor NotifyIME(NOTIFICATION_OF_FOCUS) is called. By this bug, nsTextStore never resets cached selection. Therefore, for example, if you try to input "Metro" without TIP and "アプリ" with TIP, then, the "ア" is inserted before "M" because nsTextStore thinks the caret position still stays before "M". The behavior may be a regression of bug 790516.
Attachment #726000 - Flags: review?(jmathies)
Attachment #726000 - Flags: review?(jmathies) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
OS: Windows 8 Metro → Windows 8.1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: