Bug 852024 Implement MetroWidget::GetIMEUpdatePreference() r=jimm